# isucon14

./: README.md  build.sh  hosts.yaml  ssh-config
playbooks/: deploy-mysql.yaml  deploy.yaml  dev.yaml
roles/isuride/files/: isuride-matcher.service  isuride-rust.service
roles/isuride/files/sql/: 1-schema.sql  3-initial-data.sql  4-post-init.sql  init.sh
roles/isuride/files/webapp/: Cargo.toml
roles/isuride/files/webapp/src/: app_handlers.rs  chair_handlers.rs  internal_handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  owner_handlers.rs  payment_gateway.rs
roles/isuride/handlers/: main.yaml
roles/isuride/tasks/: main.yaml
roles/isuride/templates/: env.sh
roles/mysql/files/mysql/: my.cnf
roles/mysql/handlers/: main.yaml
roles/mysql/tasks/: main.yaml
roles/nginx/files/nginx/: nginx.conf
roles/nginx/files/nginx/sites-enabled/: isuride.conf
roles/nginx/handlers/: main.yaml
roles/nginx/tasks/: main.yaml
roles/tools/files/: isualp.sh  mysqldumpslow.sh
roles/tools/tasks/: main.yaml
