[package]
name = "isuride"
version = "0.1.0"
edition = "2021"
publish = false

#[profile.release]
#panic = "abort"
#lto = "fat"
#codegen-units = 1

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3.6"
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = "0.4"
dashmap = "6.1.0"
futures = "0.3.31"
hex = "0.4"
listenfd = "1"
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "rust_decimal"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
